RESOLVED FIXED42306
Resizer control does not paint in otherwise empty compositing layer
https://bugs.webkit.org/show_bug.cgi?id=42306
Summary Resizer control does not paint in otherwise empty compositing layer
Simon Fraser (smfr)
Reported 2010-07-14 17:23:31 PDT
This test: LayoutTests/compositing/overflow/scrollbar-painting.html shows that we're failing to set drawsContent() when there's a resizer control.
Attachments
Patch (6.88 KB, patch)
2010-07-29 11:34 PDT, Simon Fraser (smfr)
darin: review+
Simon Fraser (smfr)
Comment 1 2010-07-29 11:34:02 PDT
Darin Adler
Comment 2 2010-07-29 11:40:10 PDT
Comment on attachment 62974 [details] Patch > +</html> > \ No newline at end of file We usually add those rather than face the wrath of diff.
Simon Fraser (smfr)
Comment 3 2010-07-29 11:51:18 PDT
Note You need to log in before you can comment on or make changes to this bug.