2010-07-29  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Darin Adler.

        Resizer control does not paint in otherwise empty compositing layer
        https://bugs.webkit.org/show_bug.cgi?id=42306

        Ensure that we create backing store for an empty element with resize: both,
        in order to render the resizer control.

        Test: compositing/overflow/resize-painting.html

        * rendering/RenderLayerBacking.h:
        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::isSimpleContainerCompositingLayer): Check for hasOverflowControls()
        earlier, before any child checks.
        (WebCore::RenderLayerBacking::hasNonCompositingDescendants): Renamed from hasNonCompositingContent()
        to clarify its purpose.

Canonical link: https://commits.webkit.org/55121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64298 268f45cc-cd09-0410-ab3c-d52691b4dbfc