WebCore/rendering/RenderLayerBacking.cpp
@@ -650,6 +650,9 @@ bool RenderLayerBacking::isSimpleContainerCompositingLayer() const
     if (hasBoxDecorationsOrBackground(renderObject))
         return false;
 
+    if (m_owningLayer->hasOverflowControls())
+        return false;
+
     // If we have got this far and the renderer has no children, then we're ok.
     if (!renderObject->firstChild())
         return true;
@@ -678,26 +681,23 @@ bool RenderLayerBacking::isSimpleContainerCompositingLayer() const
         if (hasBoxDecorationsOrBackgroundImage(style))
             return false;
 
-        // Ceck to see if all the body's children are compositing layers.
-        if (hasNonCompositingContent())
+        // Check to see if all the body's children are compositing layers.
+        if (hasNonCompositingDescendants())
             return false;
         
         return true;
     }
 
     // Check to see if all the renderer's children are compositing layers.
-    if (hasNonCompositingContent())
+    if (hasNonCompositingDescendants())
         return false;
     
     return true;
 }
 
 // Conservative test for having no rendered children.
-bool RenderLayerBacking::hasNonCompositingContent() const
+bool RenderLayerBacking::hasNonCompositingDescendants() const
 {
-    if (m_owningLayer->hasOverflowControls())
-        return true;
-    
     // Some HTML can cause whitespace text nodes to have renderers, like:
     // <div>
     // <img src=...>
